verificando pq o efeito toggle não está funcionando

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="assets/Avatar.png" alt="Foto de perfil" />
+        <img src="./assets/Avatar.png" alt="Foto de perfil" />
         <p>@englishwithpatricia007</p>
       </div>
 
@@ -71,6 +71,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="script.js" />
+    <script src="./script.js"></script>
   </body>
 </html>
